--- a/code/django_webapp/quiz/templates/quiz/tutors/quiz_change_list.html
+++ b/code/django_webapp/quiz/templates/quiz/tutors/quiz_change_list.html
@@ -22,7 +22,7 @@
       <tbody>
         {% for quiz in quizzes %}
           <tr>
-            <td class="align-middle"><a href="{% url 'tutor:quiz_change' quiz.pk %}">{{ quiz.name }}</a></td>
+            <td class="align-middle"><a style='color: black; font-size: 14px' href="{% url 'tutor:quiz_change' quiz.pk %}">{{ quiz.name }}</a></td>
             <td class="align-middle">{{ quiz.subject.get_html_badge }}</td>
             <td class="align-middle">{{ quiz.questions_count }}</td>
             <td class="align-middle">{{ quiz.taken_count }}</td>
