added link to view list of students

--- a/code/django_webapp/quiz/templates/quiz/base.html
+++ b/code/django_webapp/quiz/templates/quiz/base.html
@@ -42,6 +42,7 @@
         <ul class="links">
           <li><a href="{% url 'tutordash:home' %}">Courses</a></li>
       		<li><a href="{% url 'tutor:quiz_change_list' %}">Quizzes</a></li>
+          <li><a href="{% url 'tutordash:student_detail' %}">Students</a></li>
           <li>
             <ul style="padding: 0 10px 0 30px; float: right">
               <li><a href="" style="cursor: default; padding: 0; margin: 0 0 0 0; text-align:center; "><small>Logged in as {{user.first_name}}</small></a></li>
