--- a/code/django_webapp/quiz/templates/quiz/tutors/quiz_results.html
+++ b/code/django_webapp/quiz/templates/quiz/tutors/quiz_results.html
@@ -28,7 +28,7 @@
       <tbody>
         {% for taken_quiz in taken_quizzes %}
           <tr>
-            <td>{{ taken_quiz.student.user.username }}</td>
+            <td>{{ taken_quiz.student.user.first_name }}</td>
             <td>{{ taken_quiz.date|naturaltime }}</td>
             <td>{{ taken_quiz.score }}</td>
           </tr>
